Dibuat menggunakan Colaboratory

--- a/program_v1.ipynb
+++ b/program_v1.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "program_v1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCOxJHdD8u9OcfX/lTDIHt",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMyDs0bG2g1UGWBL2q1mUQ+"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/imams12/Teori_Ring/blob/main/program_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -81,17 +70,6 @@
         "nol=set(NOL)\n",
         "print('Elemen pembagi nol dari Z{0}:'.format(n))\n",
         "print(nol)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pzkAwYhFV4L5"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
